# LargeInt

./: .gitignore  CMakeLists.txt  LargeInt.hpp  LargeInt_atomic.hpp  LargeInt_general.hpp  LargeInt_recursive.hpp  LargeInt_specific.hpp  README.md  debug_print.hpp  main.cpp
docs/: large_int.doxy
include/large_int/: large_int.hpp  large_int_8.hpp  large_int_core.hpp
include/large_int/details/: branch_side.hpp  burnikel_ziegler.hpp  large_int_8_impl.hpp  large_int_8_impl.ipp  large_int_8_operators.hpp  member_8.hpp  member_core.hpp
large_int/: LargeInt.hpp  LargeInt_atomic.hpp  LargeInt_recursive.hpp  arithmetic_atomic.hpp  arithmetic_recursive.hpp  assignment_atomic.hpp  assignment_recursive.hpp  comparison_atomic.hpp  comparison_recursive.hpp  debug_print.hpp  in-de-crement_atomic.hpp  in-de-crement_recursive.hpp
operators/atomic/: arithmetic.hpp  assignment.hpp  comparison.hpp  in-de-crement.hpp
operators/general/: arithmetic.hpp  assignment.hpp  comparison.hpp  in-de-crement.hpp
operators/recursive/: arithmetic.hpp  in-de-crement.hpp
operators/specific/: arithmetic.hpp  assignment.hpp  comparison.hpp  in-de-crement.hpp
tests/: CMakeLists.txt
tests/arithmetic_tests/: CMakeLists.txt  add.cpp  add_byte.cpp  bitwise.cpp  div.cpp  mod.cpp  mul.cpp  mul_bytes.cpp  shift_ints.cpp  sub.cpp
tests/lib/: CMakeLists.txt
tests/operator_test/: arithmetic.cpp
tests/output_tests/: CMakeLists.txt  print_byte.cpp  print_int.cpp  print_large.cpp  print_long.cpp  print_short.cpp
tests/print_test/: print_number.cpp  str_repr.cpp
(+15 files in other folders)
